kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pacifista-website-deployment
  namespace: 'funixproductions'
  labels:
    app: angular
    service: pacifista-web

spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular
      service: pacifista-web
  template:
    metadata:
      namespace: 'funixproductions'
      annotations:
        build-time: "TIME-UPDATE-BUILD-FNG"
      labels:
        app: angular
        service: pacifista-web
    spec:
      containers:
        - name: angular-pacifista-web
          image: ghcr.io/pacifistamc/pacifista-website:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "800Mi"
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service

metadata:
  namespace: 'funixproductions'
  name: pacifista-web

spec:
  type: ClusterIP
  selector:
    app: angular
    service: pacifista-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
